--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -17,6 +17,7 @@ jobs:
         - checkout
         # Run your orb's commands to validate them.
         - circleci-tailscale/install
+        - circleci-tailscale/connect
 workflows:
   test-deploy:
     jobs:
