--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -24,6 +24,7 @@ workflows:
       # Make sure to include "filters: *filters" in every test job you want to run as part of your deployment.
       - command-tests:
           filters: *filters
+          context: orb-publishing
       - orb-tools/pack:
           filters: *filters
       - orb-tools/publish:
