--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -16,8 +16,9 @@ jobs:
       steps:
         - checkout
         # Run your orb's commands to validate them.
-        - circleci-tailscale/install
-        - circleci-tailscale/connect
+        - circleci-tailscale/greet
+        # - circleci-tailscale/install
+        # - circleci-tailscale/connect
 workflows:
   test-deploy:
     jobs:
