Trying something...not understanding how context env vars are available

--- a/src/commands/greet.yml
+++ b/src/commands/greet.yml
@@ -19,7 +19,7 @@ steps:
   - run:
       environment:
         PARAM_TO: << parameters.to >>
-        TAILSCALE_AUTH_KEY: << parameters.tailscale-auth-key >>
+        TAILSCALE_AUTH_KEY: ${<< parameters.tailscale-auth-key >>}
         HTTP_PROXY_PORT: << parameters.http-proxy-port >>
       name: Hello Greeting
       command: <<include(scripts/greet.sh)>>
