--- a/src/commands/connect.yml
+++ b/src/commands/connect.yml
@@ -14,6 +14,10 @@ parameters:
     default: "1055"
     description: "SOCKS5 proxy port"
 steps:
+  - run: |
+      {
+        echo "export TAILSCALE_AUTH_KEY=$TAILSCALE_AUTH_KEY"
+      } >> $BASH_ENV
   - run:
       environment:
         TAILSCALE_AUTH_KEY: <<parameters.tailscale-auth-key>>
