--- a/src/commands/proxychains.yml
+++ b/src/commands/proxychains.yml
@@ -3,26 +3,6 @@ description: >
 
 steps:
   - run: |
-      set -eu
-
-      CAN_ROOT=
-      SUDO=
-      if [ "$(id -u)" = 0 ]; then
-          CAN_ROOT=1
-          SUDO=""
-      elif type sudo >/dev/null; then
-        CAN_ROOT=1
-        SUDO="sudo"
-      elif type doas >/dev/null; then
-        CAN_ROOT=1
-        SUDO="doas"
-      fi
-      if [ "$CAN_ROOT" != "1" ]; then
-        echo "This installer needs to run commands as root."
-        echo "We tried looking for 'sudo' and 'doas', but couldn't find them."
-        echo "Either re-run this script as root, or set up sudo/doas."
-        exit 1
-      fi
-
-      $SUDO apt update
-      $SUDO apt install -y proxychains
+      sudo apt update
+      sudo apt install -y proxychains
+    name: Install proxychains
