fix: lint errors

--- a/src/commands/proxychains.yml
+++ b/src/commands/proxychains.yml
@@ -9,13 +9,4 @@ steps:
         sudo apt install -y proxychains-ng
   - run:
       name: Write proxychains config file
-      command: |
-        sudo tee ./proxychains.conf <<EOF
-        # proxychains.conf
-        #
-        # This file is used to configure the proxychains daemon.
-        #
-        # See the proxychains.conf
-        [ProxyList]
-        socks5  127.0.0.1 1055
-        EOF
+      command: <<include(scripts/proxychains.sh)>>
