--- a/src/commands/proxychains.yml
+++ b/src/commands/proxychains.yml
@@ -6,7 +6,7 @@ steps:
       name: Install proxychains
       command: |
         sudo apt update
-        sudo apt install -y proxychains-ng
+        sudo apt install -y proxychains4
   - run:
       name: Write proxychains config file
       command: <<include(scripts/proxychains.sh)>>
