--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -16,13 +16,16 @@ jobs:
       steps:
         - checkout
         # Run your orb's commands to validate them.
-        - circleci-tailscale/greet
+        - circleci-tailscale/install
+        - circleci-tailscale/connect
+        - circleci-tailscale/proxychains
 workflows:
   test-deploy:
     jobs:
       # Make sure to include "filters: *filters" in every test job you want to run as part of your deployment.
       - command-tests:
           filters: *filters
+          context: orb-publishing
       - orb-tools/pack:
           filters: *filters
       - orb-tools/publish:
